--- a/index.html
+++ b/index.html
@@ -5,15 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <title>KitchenGearLab: Practical Kitchen Gear Reviews</title>
-  <meta name="description" content="Neutral, test-driven kitchen gear reviews and buying guides focused on real-world cooking performance and usability." />
+  <meta name="description" content="Calm, test-driven kitchen gear reviews and buying guides focused on real-world cooking performance and usability." />
   <meta name="robots" content="index,follow,max-image-preview:large,max-snippet:-1,max-video-preview:-1" />
   <meta name="referrer" content="strict-origin-when-cross-origin" />
   <meta name="color-scheme" content="light only" />
   <meta name="theme-color" content="#ffffff" />
 
   <link rel="canonical" href="https://kitchengearlab.github.io/" />
-
-  <!-- CSS (single local stylesheet) -->
   <link rel="stylesheet" href="/assets/css/styles.css" />
 
   <!-- Favicons (root) -->
@@ -29,7 +27,7 @@
   <meta property="og:locale" content="en_US" />
   <meta property="og:url" content="https://kitchengearlab.github.io/" />
   <meta property="og:title" content="KitchenGearLab: Practical Kitchen Gear Reviews" />
-  <meta property="og:description" content="Neutral, test-driven kitchen gear reviews and buying guides focused on real-world cooking performance and usability." />
+  <meta property="og:description" content="Calm, test-driven kitchen gear reviews and buying guides focused on real-world cooking performance and usability." />
   <meta property="og:image" content="https://kitchengearlab.github.io/assets/images/og/home-og-1200x630.webp" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
@@ -39,17 +37,18 @@
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="KitchenGearLab: Practical Kitchen Gear Reviews" />
-  <meta name="twitter:description" content="Neutral, test-driven kitchen gear reviews and buying guides focused on real-world cooking performance and usability." />
+  <meta name="twitter:description" content="Calm, test-driven kitchen gear reviews and buying guides focused on real-world cooking performance and usability." />
   <meta name="twitter:image" content="https://kitchengearlab.github.io/assets/images/og/home-og-1200x630.webp" />
 
-  <!-- Performance hints -->
+  <!-- Performance -->
   <link rel="preload" as="image"
         href="https://kitchengearlab.github.io/assets/images/hero/home-hero-1600x840.webp"
         imagesrcset="https://kitchengearlab.github.io/assets/images/hero/home-hero-1600x840.webp 1600w, https://kitchengearlab.github.io/assets/images/hero/home-hero-2400x1260.webp 2400w"
         imagesizes="100vw" />
-  <link rel="preload" as="image" href="https://kitchengearlab.github.io/assets/images/brand/kitchengearlab-logo-512.png" />
+  <link rel="preload" as="image"
+        href="https://kitchengearlab.github.io/assets/images/brand/kitchengearlab-logo-512.png" />
 
-  <!-- Structured Data (JSON-LD) -->
+  <!-- Structured Data -->
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
@@ -64,8 +63,7 @@
           "url": "https://kitchengearlab.github.io/assets/images/brand/kitchengearlab-logo-512.png",
           "width": 512,
           "height": 512
-        },
-        "sameAs": []
+        }
       },
       {
         "@type": "WebSite",
@@ -87,7 +85,7 @@
         "@id": "https://kitchengearlab.github.io/#webpage",
         "url": "https://kitchengearlab.github.io/",
         "name": "Practical Kitchen Gear Reviews & Buying Guides",
-        "description": "Neutral, test-driven kitchen gear reviews and buying guides focused on real-world cooking performance and usability.",
+        "description": "Calm, test-driven kitchen gear reviews and buying guides focused on real-world cooking performance and usability.",
         "isPartOf": { "@id": "https://kitchengearlab.github.io/#website" },
         "publisher": { "@id": "https://kitchengearlab.github.io/#organization" },
         "inLanguage": "en-US",
@@ -117,10 +115,11 @@
           <span class="logo" aria-hidden="true">
             <img
               src="https://kitchengearlab.github.io/assets/images/brand/kitchengearlab-logo-512.png"
-              width="32" height="32"
+              width="32"
+              height="32"
               alt=""
-              decoding="async"
               loading="eager"
+              decoding="async"
               fetchpriority="high"
             />
           </span>
@@ -130,7 +129,7 @@
           </span>
         </a>
 
-        <!-- ✅ Short professional menu -->
+        <!-- Short professional menu (these exist in your repo) -->
         <nav class="nav" aria-label="Primary">
           <a href="/guides/">Guides</a>
           <a href="/best-air-fryers/">Best Air Fryers</a>
@@ -146,11 +145,11 @@
         <div class="hero-inner">
 
           <div class="hero-card">
-            <h1 id="hero-title">Practical Kitchen Gear Reviews &amp; Buying Guides</h1>
+            <h1 id="hero-title">Clear, test-driven kitchen gear guidance</h1>
 
             <p class="lead">
-              KitchenGearLab publishes test-driven, brand-neutral guidance to help you compare tools you’ll actually use.
-              When something depends on the specific version, we’ll say it: <strong>varies by model</strong>.
+              KitchenGearLab helps you choose kitchen tools with confidence.
+              We focus on real-world usability, observable performance, and practical trade-offs — not hype.
             </p>
 
             <div class="actions" role="group" aria-label="Primary actions">
@@ -159,7 +158,10 @@
             </div>
 
             <p class="small" style="margin-top: var(--s-4);">
-              Trust-first: <a href="/about/">About</a> · <a href="/disclosure/">Disclosure</a> · <a href="/privacy/">Privacy</a>
+              Trust-first:
+              <a href="/about/">About</a> ·
+              <a href="/disclosure/">Disclosure</a> ·
+              <a href="/privacy/">Privacy</a>
             </p>
 
             <p class="last-updated">Last updated: 2026-02-01</p>
@@ -169,7 +171,8 @@
             <picture>
               <source
                 type="image/webp"
-                srcset="https://kitchengearlab.github.io/assets/images/hero/home-hero-1600x840.webp 1600w, https://kitchengearlab.github.io/assets/images/hero/home-hero-2400x1260.webp 2400w"
+                srcset="https://kitchengearlab.github.io/assets/images/hero/home-hero-1600x840.webp 1600w,
+                        https://kitchengearlab.github.io/assets/images/hero/home-hero-2400x1260.webp 2400w"
                 sizes="(max-width: 900px) 100vw, 40vw"
               />
               <img
@@ -188,21 +191,15 @@
       </div>
     </section>
 
-    <nav class="breadcrumbs" aria-label="Breadcrumb">
-      <div class="container">
-        <span><a href="/" aria-current="page">Home</a></span>
-      </div>
-    </nav>
-
     <section class="section" aria-labelledby="start-title">
       <div class="container">
         <h2 id="start-title">Start here</h2>
-        <p class="muted">Clear paths to the pages visitors actually want.</p>
+        <p class="muted">The most common questions we help readers answer.</p>
 
         <div class="grid cols-2" role="list" style="margin-top: var(--s-6);">
           <article class="card" role="listitem">
             <h3 class="card-title"><a href="/best-air-fryers/">Best Air Fryers</a></h3>
-            <p class="muted">Comparison-first guide for the most common air fryer decision.</p>
+            <p class="muted">A comparison-first guide to help you narrow down real options.</p>
             <div class="actions" style="margin-top: var(--s-4);">
               <a class="btn btn-secondary" href="/best-air-fryers/">Open guide</a>
             </div>
@@ -210,7 +207,7 @@
 
           <article class="card" role="listitem">
             <h3 class="card-title"><a href="/guides/what-is-an-air-fryer/">What is an air fryer?</a></h3>
-            <p class="muted">A clear explainer before you buy: what matters, what doesn’t.</p>
+            <p class="muted">A calm explainer before you decide whether it’s worth buying.</p>
             <div class="actions" style="margin-top: var(--s-4);">
               <a class="btn btn-secondary" href="/guides/what-is-an-air-fryer/">Read</a>
             </div>
@@ -218,7 +215,7 @@
 
           <article class="card" role="listitem">
             <h3 class="card-title"><a href="/guides/how-to-choose-an-air-fryer/">How to choose</a></h3>
-            <p class="muted">Practical checklist: capacity, controls, cleanup, and performance cues.</p>
+            <p class="muted">What actually matters: capacity, controls, cleanup, and consistency.</p>
             <div class="actions" style="margin-top: var(--s-4);">
               <a class="btn btn-secondary" href="/guides/how-to-choose-an-air-fryer/">Read</a>
             </div>
@@ -226,7 +223,7 @@
 
           <article class="card" role="listitem">
             <h3 class="card-title"><a href="/guides/are-air-fryers-worth-it/">Are air fryers worth it?</a></h3>
-            <p class="muted">When it’s worth buying and when it’s not, explained without hype.</p>
+            <p class="muted">When it makes sense — and when it doesn’t.</p>
             <div class="actions" style="margin-top: var(--s-4);">
               <a class="btn btn-secondary" href="/guides/are-air-fryers-worth-it/">Read</a>
             </div>
@@ -238,32 +235,31 @@
     <section class="section" id="method" aria-labelledby="method-title">
       <div class="container">
         <h2 id="method-title">Trust &amp; methodology</h2>
-        <p class="muted">How we evaluate gear (and how to use our work)</p>
+        <p class="muted">How to read our guides and use them well.</p>
 
         <div class="stack" style="margin-top: var(--s-6);">
           <p>
-            KitchenGearLab is built around clear criteria and repeatable checks. We describe what we did and what we observed,
-            so you can decide whether a recommendation fits your cooking style, budget, and space.
+            We evaluate kitchen gear using repeatable checks and clear criteria.
+            Our goal is not to crown a universal “best”, but to explain trade-offs so you can decide what fits your kitchen.
           </p>
 
-          <h3>What we look for</h3>
           <ul>
-            <li><strong>Usability:</strong> controls, ergonomics, readability, and day-to-day friction.</li>
-            <li><strong>Performance:</strong> consistent results under typical home conditions (varies by model).</li>
-            <li><strong>Cleanup:</strong> residue traps, dishwasher practicality, surfaces that clean easily.</li>
-            <li><strong>Durability cues:</strong> build quality signals and common failure points.</li>
-            <li><strong>Transparency:</strong> we avoid repeating claims we can’t verify.</li>
+            <li><strong>Usability:</strong> controls, ergonomics, day-to-day friction.</li>
+            <li><strong>Performance:</strong> consistency under normal home use.</li>
+            <li><strong>Cleanup:</strong> residue traps, dishwasher practicality.</li>
+            <li><strong>Durability cues:</strong> realistic longevity signals.</li>
+            <li><strong>Transparency:</strong> no unverified claims.</li>
           </ul>
 
           <div class="note">
             <p class="small">
-              We keep disclosures clear and separate. See <a href="/disclosure/">Disclosure</a>.
+              Disclosures are kept separate and explicit. See <a href="/disclosure/">Disclosure</a>.
             </p>
           </div>
 
           <div class="note attention">
             <p class="small">
-              Informational-only disclaimer: Content is for general information and comparison. Product details can change and performance varies by model.
+              Informational only. Product details change over time and performance can vary by model.
             </p>
           </div>
         </div>
@@ -280,11 +276,10 @@
           <p class="muted">Neutral, test-driven kitchen gear reviews and buying guides.</p>
 
           <p class="footer-fineprint">
-            Affiliate disclosure: Some links may be affiliate links. If you buy through them, we may earn a commission at no extra cost to you.
-            See <a href="/disclosure/">Disclosure</a>.
+            Affiliate disclosure: Some links may earn a commission. See <a href="/disclosure/">Disclosure</a>.
           </p>
           <p class="footer-fineprint">
-            Privacy: See <a href="/privacy/">Privacy policy</a>.
+            Privacy: <a href="/privacy/">Privacy policy</a>.
           </p>
         </div>
 
@@ -301,9 +296,7 @@
       </div>
 
       <p class="footer-fineprint">
-        <span aria-hidden="true">©</span>
-        <span>KitchenGearLab</span>
-        <span class="visually-hidden">Copyright</span>
+        <span aria-hidden="true">©</span> <span>KitchenGearLab</span>
       </p>
     </div>
   </footer>
