--- a/index.html
+++ b/index.html
@@ -41,13 +41,12 @@
   <meta name="twitter:image" content="https://kitchengearlab.github.io/assets/images/og/home-og-1200x630.webp" />
   <meta name="twitter:image:alt" content="Warm premium kitchen counter with modern appliances in soft natural daylight." />
 
-  <!-- Performance: Hero preload (match sizes + srcset) -->
+  <!-- Performance: Hero preload -->
   <link rel="preload" as="image"
         href="https://kitchengearlab.github.io/assets/images/hero/home-hero-1600x840.webp"
         imagesrcset="https://kitchengearlab.github.io/assets/images/hero/home-hero-1600x840.webp 1600w, https://kitchengearlab.github.io/assets/images/hero/home-hero-2400x1260.webp 2400w"
         imagesizes="(max-width: 900px) 100vw, 40vw" />
 
-  <!-- Optional: logo preload (tiny file, ok) -->
   <link rel="preload" as="image"
         href="https://kitchengearlab.github.io/assets/images/brand/kitchengearlab-logo-512.png" />
 
@@ -177,6 +176,7 @@
         <nav class="nav" aria-label="Primary">
           <a href="/guides/">Guides</a>
           <a href="/best-air-fryers/">Best Air Fryers</a>
+          <a href="/ninja-air-fryers/">Ninja Hub</a>
         </nav>
       </div>
     </div>
@@ -249,9 +249,17 @@
         <div class="grid cols-2" role="list" style="margin-top: var(--s-6);">
           <article class="card" role="listitem">
             <h3 class="card-title"><a href="/best-air-fryers/">Best Air Fryers</a></h3>
-            <p class="muted">A comparison-first guide to help you narrow down real options.</p>
+            <p class="muted">Comparison-first shortlist for real kitchens, not marketing claims.</p>
             <div class="actions" style="margin-top: var(--s-4);">
               <a class="btn btn-secondary" href="/best-air-fryers/">Open guide</a>
+            </div>
+          </article>
+
+          <article class="card" role="listitem">
+            <h3 class="card-title"><a href="/ninja-air-fryers/">Ninja Air Fryers Hub</a></h3>
+            <p class="muted">Brand hub: key models, what changes between generations, and what to buy.</p>
+            <div class="actions" style="margin-top: var(--s-4);">
+              <a class="btn btn-secondary" href="/ninja-air-fryers/">Explore hub</a>
             </div>
           </article>
 
@@ -270,14 +278,6 @@
               <a class="btn btn-secondary" href="/guides/how-to-choose-an-air-fryer/">Read</a>
             </div>
           </article>
-
-          <article class="card" role="listitem">
-            <h3 class="card-title"><a href="/guides/are-air-fryers-worth-it/">Are air fryers worth it?</a></h3>
-            <p class="muted">When it makes sense, and when it doesn’t.</p>
-            <div class="actions" style="margin-top: var(--s-4);">
-              <a class="btn btn-secondary" href="/guides/are-air-fryers-worth-it/">Read</a>
-            </div>
-          </article>
         </div>
       </div>
     </section>
@@ -285,22 +285,55 @@
     <section class="section" aria-labelledby="popular-title">
       <div class="container">
         <h2 id="popular-title">Popular right now</h2>
-        <p class="muted">Fast paths to the most decision-driven pages.</p>
+        <p class="muted">Decision-driven pages people open when they’re close to buying.</p>
 
         <div class="grid cols-3" role="list" style="margin-top: var(--s-6);">
           <article class="card" role="listitem">
+            <h3 class="card-title"><a href="/ninja-air-fryers/ninja-air-fryer-review/">Ninja Air Fryer Review</a></h3>
+            <p class="muted">Who it fits, what it does well, and the trade-offs that matter.</p>
+            <div class="actions" style="margin-top: var(--s-4);">
+              <a class="btn btn-secondary" href="/ninja-air-fryers/ninja-air-fryer-review/">Open</a>
+            </div>
+          </article>
+
+          <article class="card" role="listitem">
+            <h3 class="card-title"><a href="/ninja-air-fryers/ninja-creami-review/">Ninja Creami Review</a></h3>
+            <p class="muted">Texture results, daily workflow, cleanup friction, and durability cues.</p>
+            <div class="actions" style="margin-top: var(--s-4);">
+              <a class="btn btn-secondary" href="/ninja-air-fryers/ninja-creami-review/">Open</a>
+            </div>
+          </article>
+
+          <article class="card" role="listitem">
+            <h3 class="card-title"><a href="/ninja-vs-philips/">Ninja vs Philips</a></h3>
+            <p class="muted">A calm side-by-side comparison to pick the right style for your kitchen.</p>
+            <div class="actions" style="margin-top: var(--s-4);">
+              <a class="btn btn-secondary" href="/ninja-vs-philips/">Compare</a>
+            </div>
+          </article>
+
+          <article class="card" role="listitem">
+            <h3 class="card-title"><a href="/ninja-vs-cosori/">Ninja vs Cosori</a></h3>
+            <p class="muted">Trade-offs: controls, results consistency, noise, and cleanup.</p>
+            <div class="actions" style="margin-top: var(--s-4);">
+              <a class="btn btn-secondary" href="/ninja-vs-cosori/">Compare</a>
+            </div>
+          </article>
+
+          <article class="card" role="listitem">
+            <h3 class="card-title"><a href="/guides/are-air-fryers-worth-it/">Are air fryers worth it?</a></h3>
+            <p class="muted">When it makes sense and when it becomes countertop clutter.</p>
+            <div class="actions" style="margin-top: var(--s-4);">
+              <a class="btn btn-secondary" href="/guides/are-air-fryers-worth-it/">Read</a>
+            </div>
+          </article>
+
+          <article class="card" role="listitem">
             <h3 class="card-title"><a href="/best-air-fryers/">Best Air Fryers</a></h3>
-            <p class="muted">Shortlist options by size, controls, and results consistency.</p>
-          </article>
-
-          <article class="card" role="listitem">
-            <h3 class="card-title"><a href="/guides/how-to-choose-an-air-fryer/">How to choose an air fryer</a></h3>
-            <p class="muted">A clean checklist: capacity, baskets, cleanup, and noise.</p>
-          </article>
-
-          <article class="card" role="listitem">
-            <h3 class="card-title"><a href="/guides/are-air-fryers-worth-it/">Are they worth it?</a></h3>
-            <p class="muted">When an air fryer truly saves time, and when it’s clutter.</p>
+            <p class="muted">Shortlist by capacity, workflow, cleanup, and consistency.</p>
+            <div class="actions" style="margin-top: var(--s-4);">
+              <a class="btn btn-secondary" href="/best-air-fryers/">Open</a>
+            </div>
           </article>
         </div>
       </div>
@@ -399,6 +432,7 @@
           <div class="footer-links">
             <a href="/guides/">Guides</a>
             <a href="/best-air-fryers/">Best Air Fryers</a>
+            <a href="/ninja-air-fryers/">Ninja Hub</a>
             <a href="/about/">About</a>
             <a href="/disclosure/">Disclosure</a>
             <a href="/privacy/">Privacy</a>
